--- a/.gitignore
+++ b/.gitignore
@@ -4,12 +4,17 @@ __pycache__/
 *$py.class
 *.pyc
 
-# Some exluded files
+# Exluded some files
 lib/config_class.py
 config/config.py
+config/config_template_dev.py
 config/config.json
 install_new.sql
 cleanup_pycache.sh
+migratedb.py
+
+# Exlude "dirs"
+backup
 
 # Other stuff
 Thumbs.db
@@ -17,4 +22,3 @@ libtemp*
 temp*
 *.backup
 *-dev.py
-backup
