graceful stop using systemd added a handler for the sigterm for an graceful stop using systemd

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ __pycache__/
 
 # Exluded some files
 config/config.py
+config/logging.yaml
 config/config_template_dev.py
 config/config.json
 install/requirements.txt
